--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -14,6 +14,8 @@ async-trait = {version = "0.1.57", optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", default-features = false}
 futures = {version = "0.3.23", optional = true}
 maybe-async-cfg = "0.2.3"
+notify = {version = "5.0.0", default-features = false, features = ["fsevent-sys", "macos_fsevent"]}
+notify-debouncer-mini = {version = "0.2.1", default-features = false}
 once_cell = "1.14.0"
 parity-tokio-ipc = {version = "0.9.0", optional = true}
 tracing = "0.1.36"
@@ -26,7 +28,7 @@ windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.14"
 signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "net", "io-util", "sync"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}
 
 [target.'cfg(target_os="linux")'.dependencies]
 sd-notify = "0.4.0"
