--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -4,17 +4,18 @@ name = "daemon-slayer-client"
 version = "0.1.0"
 
 [dependencies]
-async-trait = "0.1.57"
+async-trait = {version = "0.1.57", optional = true}
 eyre = "0.6.8"
 maybe-async-cfg = "0.2.3"
 parity-tokio-ipc = {version = "0.9.0", optional = true}
 reqwest = {version = "0.11.11", optional = true}
-tokio = {version = "1.20.1", features = ["net"]}
+tokio = {version = "1.20.1", features = ["net"], optional = true}
 tonic = {version = "0.8.1", optional = true}
 tonic-health = {version = "0.7.1", optional = true}
 
 [target.'cfg(windows)'.dependencies]
 regex = "1.6.0"
+registry = "1.2.2"
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(target_os="linux")'.dependencies]
@@ -27,7 +28,7 @@ once_cell = "1.14.0"
 regex = "1.6.0"
 
 [features]
-async-tokio = []
+async-tokio = ["async-trait", "tokio"]
 blocking = ["reqwest/blocking"]
 grpc-health-check = ["tonic", "tonic-health", "async-tokio"]
 http-health-check = ["reqwest"]
