--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -4,28 +4,29 @@ name = "daemon-slayer-client"
 version = "0.1.0"
 
 [dependencies]
-async-trait = {version = "0.1.57", optional = true}
-eyre = "0.6.8"
-maybe-async-cfg = "0.2.3"
-parity-tokio-ipc = {version = "0.9.0", optional = true}
-reqwest = {version = "0.11.11", optional = true}
-tokio = {version = "1.20.1", features = ["net"], optional = true}
-tonic = {version = "0.8.1", optional = true}
-tonic-health = {version = "0.7.1", optional = true}
+async-trait = {version = "0.1", optional = true}
+eyre = "0.6"
+maybe-async-cfg = "0.2"
+parity-tokio-ipc = {version = "0.9", optional = true}
+reqwest = {version = "0.11", optional = true}
+tokio = {version = "1", features = ["net"], optional = true}
+tonic = {version = "0.8", optional = true}
+tonic-health = {version = "0.7", optional = true}
+utfx = "0.1"
 
 [target.'cfg(windows)'.dependencies]
-regex = "1.6.0"
-registry = "1.2.2"
+regex = "1"
+registry = "1.2"
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(target_os="linux")'.dependencies]
 systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "530b606d9ed41049e4efb0a0ae85e1237e4f0784"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
-directories = "4.0.1"
-launchd = "0.2.0"
-once_cell = "1.14.0"
-regex = "1.6.0"
+directories = "4"
+launchd = "0.2"
+once_cell = "1.14"
+regex = "1.6"
 
 [features]
 async-tokio = ["async-trait", "tokio"]
