--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -6,9 +6,15 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1.57"
+axum = "0.5.16"
 daemon-slayer = {path = "../../daemon-slayer", features = ["all-async", "all-sync"]}
 futures = "0.3.24"
+reqwest = { version = "0.11.11", features = ["blocking"] }
+serde = "1.0.144"
+serde_derive = "1.0.144"
+tempfile = "3.3.0"
 tokio = {version = "1.21.0", features = ["rt-multi-thread"]}
+toml = "0.5.8"
 tracing = "0.1.36"
 
 [dev-dependencies]
