--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -24,7 +24,7 @@ systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "530b6
 
 [target.'cfg(target_os = "macos")'.dependencies]
 directories = "4"
-launchd = "0.2"
+launchd = {git = "https://github.com/aschey/launchd", rev = "c4d6ae24de02cfc04097b1de3b33434eeb4a5d5e"}
 once_cell = "1.14"
 regex = "1.6"
 
