make file watcher optional

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ members = [
 resolver = "2"
 
 [features]
-all-async = ["async-client", "async-server", "daemon-slayer-cli/all-async"]
-all-sync = ["sync-client", "sync-server", "daemon-slayer-cli/all-sync"]
+all-async = ["async-client", "async-server", "daemon-slayer-cli/all-async", "file-watcher"]
+all-sync = ["sync-client", "sync-server", "daemon-slayer-cli/all-sync", "file-watcher"]
 async-client = ["console", "async-tokio", "client", "cli", "daemon-slayer-cli/async-client", "daemon-slayer-client/async-tokio"]
-async-server = ["direct", "async-tokio", "server", "cli", "logging", "daemon-slayer-cli/async-server"]
+async-server = ["direct", "async-tokio", "server", "cli", "logging", "daemon-slayer-cli/async-server", "file-watcher"]
 async-tokio = [
   "daemon-slayer-server/async-tokio",
   "daemon-slayer-cli/async-tokio",
@@ -29,13 +29,14 @@ cli = ["daemon-slayer-cli"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console", "daemon-slayer-cli/console"]
 direct = ["daemon-slayer-server/direct", "daemon-slayer-cli/direct"]
+file-watcher = ["daemon-slayer-server/file-watcher"]
 grpc-health-check = ["daemon-slayer-client/grpc-health-check"]
 http-health-check = ["daemon-slayer-client/http-health-check"]
 ipc-health-check = ["daemon-slayer-client/ipc-health-check", "daemon-slayer-server/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
 server = ["daemon-slayer-server"]
 sync-client = ["client", "cli", "daemon-slayer-cli/sync-client", "daemon-slayer-client/blocking"]
-sync-server = ["direct", "server", "logging", "cli", "daemon-slayer-cli/sync-server", "daemon-slayer-server/blocking"]
+sync-server = ["direct", "server", "logging", "cli", "daemon-slayer-cli/sync-server", "daemon-slayer-server/blocking", "file-watcher"]
 
 [dependencies]
 daemon-slayer-cli = {path = "./daemon-slayer-cli", optional = true}
