--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           shared-key: cache-${{ hashFiles('**/Cargo.toml') }}
       - name: test
-        env: 
+        env:
           PROTOC: ${{ github.workspace }}/protoc/bin/protoc
         run: |
           curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v3.19.4/protoc-3.19.4-${{ matrix.protoc-target }}.zip
@@ -35,4 +35,5 @@ jobs:
           cargo install cargo-hack
           cargo install cargo-make
           cargo make build-powerset
+          cargo make examples
           ${{ matrix.cargo }} test --workspace -- --nocapture
