--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -20,7 +20,7 @@ sync-server = ["server", "direct", "blocking", "logging"]
 
 [dependencies]
 async-trait = {version = "0.1", optional = true}
-clap = {git = "https://github.com/clap-rs/clap", rev = "6dc8c9943c2aaa9d50e2664847b8a7fa5ec06928", features = ["string"]}
+clap = {version = "4", features = ["string"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
 daemon-slayer-console = {path = "../daemon-slayer-console", optional = true}
 daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
