--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -13,6 +13,7 @@ blocking = ["daemon-slayer-server/blocking", "daemon-slayer-client/blocking"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console", "async-tokio"]
 direct = []
+error-handler = ["daemon-slayer-error-handler"]
 logging = ["daemon-slayer-logging"]
 server = ["daemon-slayer-server"]
 sync-client = ["client", "direct", "blocking"]
@@ -23,6 +24,7 @@ async-trait = {version = "0.1", optional = true}
 clap = {version = "4", features = ["string"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
 daemon-slayer-console = {path = "../daemon-slayer-console", optional = true}
+daemon-slayer-error-handler = {path = "../daemon-slayer-error-handler", optional = true}
 daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6"
