--- a/daemon-slayer-logging/Cargo.toml
+++ b/daemon-slayer-logging/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 all-async = ["ipc", "async-tokio", "linux-journald", "mac-oslog", "windows-eventlog"]
 all-sync = ["linux-journald", "mac-oslog", "windows-eventlog"]
 async-tokio = ["tokio", "async-trait", "futures"]
+file = ["directories"]
 ipc = ["async-tokio", "tracing-ipc"]
 linux-journald = ["tracing-journald"]
 mac-oslog = ["tracing-oslog"]
@@ -14,7 +15,7 @@ windows-eventlog = ["tracing-eventlog"]
 
 [dependencies]
 async-trait = {version = "0.1", optional = true}
-directories = {version = "4"}
+directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = "1"
 time = "0.3"
@@ -35,4 +36,4 @@ tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"]
 tracing-journald = {version = "0.3", optional = true}
 
 [target.'cfg(target_os="macos")'.dependencies]
-tracing-oslog = {version = "0.1.2", optional = true}
+tracing-oslog = {version = "0.1", optional = true}
