--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "daemon-slayer-logging",
   "daemon-slayer-console",
   "daemon-slayer-error-handler",
+  "daemon-slayer-task-queue",
   "integration-tests",
 ]
 resolver = "2"
@@ -81,3 +82,4 @@ daemon-slayer-console = {path = "./daemon-slayer-console", optional = true}
 daemon-slayer-error-handler = {path = "./daemon-slayer-error-handler", optional = true}
 daemon-slayer-logging = {path = "./daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "./daemon-slayer-server", optional = true}
+daemon-slayer-task-queue = {path = "./daemon-slayer-task-queue", optional = true}
