--- a/examples/examples/http-axum/Cargo.toml
+++ b/examples/examples/http-axum/Cargo.toml
@@ -8,8 +8,9 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.65"
 async-trait = "0.1.57"
-axum = "0.5.16"
+axum = "0.6.0-rc.2"
 daemon-slayer = {path = "../../..", features = ["all-async", "http-health-check"]}
 futures = "0.3.24"
 reqwest = "0.11.11"
