--- a/daemon-slayer-task-queue/Cargo.toml
+++ b/daemon-slayer-task-queue/Cargo.toml
@@ -6,8 +6,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "07d9f1e1ec08df67f586ff0a3ff8c3fb46da5c0b"}
-aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "07d9f1e1ec08df67f586ff0a3ff8c3fb46da5c0b", default-features = false, features = ["rustls"]}
+aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "5cad58d59e29a5fe56a26bd236841431d34ff4c2"}
+aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "5cad58d59e29a5fe56a26bd236841431d34ff4c2", default-features = false, features = ["rustls"]}
+async-trait = "0.1.57"
+daemon-slayer-core = {path = "../daemon-slayer-core"}
 log = "0.4"
 tokio = {version = "1", features = ["sync"]}
 tracing = "0.1"
