--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -3,8 +3,12 @@ edition = "2021"
 name = "daemon-slayer-core"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 async-trait = "0.1"
-tokio = {version = "1", features = ["sync"]}
+bus = {version = "2.3.0", optional = true}
+maybe-async-cfg = "0.2.3"
+tokio = {version = "1", features = ["sync"], optional = true}
+
+[features]
+async-tokio = ["tokio"]
+blocking = ["bus"]
