--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -4,8 +4,8 @@ name = "daemon-slayer-server"
 version = "0.1.0"
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async"]
-blocking = ["daemon-slayer-macros/blocking"]
+async-tokio = ["tokio", "async-trait", "futures", "daemon-slayer-macros/async", "daemon-slayer-core/async-tokio"]
+blocking = ["daemon-slayer-macros/blocking", "daemon-slayer-core/blocking"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
 file-watcher = ["notify", "notify-debouncer-mini"]
 ipc-health-check = ["parity-tokio-ipc", "async-tokio", "tokio/io-util"]
@@ -30,9 +30,7 @@ tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "macros"
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(unix)'.dependencies]
-signal-hook = "0.3"
-signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"], optional = true}
-tokio = {version = "1.20", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}
+tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}
 
 [target.'cfg(target_os="linux")'.dependencies]
 sd-notify = "0.4"
