--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [features]
 async-tokio = ["tokio", "async-trait", "futures", "daemon-slayer-macros/async", "daemon-slayer-core/async-tokio"]
-blocking = ["daemon-slayer-macros/blocking", "daemon-slayer-core/blocking"]
+blocking = ["daemon-slayer-macros/blocking", "daemon-slayer-core/blocking", "bus"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
 file-watcher = ["notify", "notify-debouncer-mini"]
 ipc-health-check = ["parity-tokio-ipc", "async-tokio", "tokio/io-util"]
@@ -20,10 +20,12 @@ notify = {version = "5", default-features = false, features = ["fsevent-sys", "m
 notify-debouncer-mini = {version = "0.2.1", default-features = false, optional = true}
 once_cell = "1"
 parity-tokio-ipc = {version = "0.9", optional = true}
-tap = "1.0.1"
+tap = "1"
 tracing = "0.1"
 
 [target.'cfg(windows)'.dependencies]
+bus = {version = "2", optional = true}
+daemon-slayer-signals = {path = "../daemon-slayer-signals"}
 registry = "1"
 signal-hook = {version = "0.3", optional = true}
 tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "macros", "sync"], optional = true}
