--- a/daemon-slayer-plugins/task-queue/Cargo.toml
+++ b/daemon-slayer-plugins/task-queue/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "daemon-slayer-task-queue"
+name = "daemon-slayer-plugin-task-queue"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,7 +9,7 @@ version = "0.1.0"
 aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "c602bdefda4d7b1f776e8523bea465c1fdf2fd44"}
 aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "c602bdefda4d7b1f776e8523bea465c1fdf2fd44", default-features = false, features = ["rustls"]}
 async-trait = "0.1.57"
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../../daemon-slayer-core"}
 log = "0.4"
 tokio = {version = "1", features = ["sync"]}
 tracing = "0.1"
