--- a/examples/examples/http-axum/Cargo.toml
+++ b/examples/examples/http-axum/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 anyhow = "1.0.65"
 async-trait = "0.1.57"
 axum = "0.6.0-rc.2"
-daemon-slayer = {path = "../../..", features = ["all-async", "http-health-check"]}
+daemon-slayer = {path = "../../..", features = ["all-async", "http-health-check", "plugin-task-queue"]}
 futures = "0.3.24"
 reqwest = "0.11.11"
 tokio = {version = "1.21.0", features = ["macros", "rt-multi-thread"]}
