add blocking file watcher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ grpc-health-check = ["daemon-slayer-client/grpc-health-check"]
 http-health-check = ["daemon-slayer-client/http-health-check"]
 ipc-health-check = ["daemon-slayer-client/ipc-health-check", "daemon-slayer-server/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
+plugin-file-watcher = ["daemon-slayer-plugin-file-watcher"]
 plugin-signals = ["daemon-slayer-plugin-signals"]
 plugin-task-queue = ["daemon-slayer-plugin-task-queue", "async-tokio"]
 server = ["daemon-slayer-server"]
