--- a/daemon-slayer-plugins/file-watcher/Cargo.toml
+++ b/daemon-slayer-plugins/file-watcher/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1.57"
+bus = {version = "2.3.0", optional = true}
 daemon-slayer-core = {path = "../../daemon-slayer-core"}
 futures = {version = "0.3.24", optional = true}
 notify = {version = "5", default-features = false, features = ["fsevent-sys", "macos_fsevent"]}
@@ -14,4 +15,4 @@ tracing = "0.1.37"
 
 [features]
 async-tokio = ["tokio", "futures"]
-blocking = []
+blocking = ["bus"]
