--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
   "daemon-slayer-plugins/signals",
   "daemon-slayer-plugins/task-queue",
   "daemon-slayer-plugins/file-watcher",
+  "daemon-slayer-plugins/ipc-health-check",
   "integration-tests",
 ]
 resolver = "2"
@@ -63,9 +64,10 @@ console = ["daemon-slayer-console", "daemon-slayer-cli/console"]
 error-handler = ["daemon-slayer-error-handler", "daemon-slayer-cli/error-handler"]
 grpc-health-check = ["daemon-slayer-client/grpc-health-check"]
 http-health-check = ["daemon-slayer-client/http-health-check"]
-ipc-health-check = ["daemon-slayer-client/ipc-health-check", "daemon-slayer-server/ipc-health-check"]
+ipc-health-check = ["daemon-slayer-client/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
 plugin-file-watcher = ["daemon-slayer-plugin-file-watcher"]
+plugin-ipc-health-check = ["daemon-slayer-plugin-ipc-health-check", "async-tokio"]
 plugin-signals = ["daemon-slayer-plugin-signals"]
 plugin-task-queue = ["daemon-slayer-plugin-task-queue", "async-tokio"]
 server = ["daemon-slayer-server"]
@@ -96,5 +98,6 @@ daemon-slayer-logging = {path = "./daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "./daemon-slayer-server", optional = true}
 
 daemon-slayer-plugin-file-watcher = {path = "./daemon-slayer-plugins/file-watcher", optional = true}
+daemon-slayer-plugin-ipc-health-check = {path = "./daemon-slayer-plugins/ipc-health-check", optional = true}
 daemon-slayer-plugin-signals = {path = "./daemon-slayer-plugins/signals", optional = true}
 daemon-slayer-plugin-task-queue = {path = "./daemon-slayer-plugins/task-queue", optional = true}
