--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -30,6 +30,8 @@ eyre = "0.6"
 futures = {version = "0.3", optional = true}
 maybe-async-cfg = "0.2"
 parity-tokio-ipc = "0.9"
+strum = "0.24.1"
+strum_macros = "0.24.3"
 time = {version = "0.3", optional = true}
 tokio = {version = "1", features = ["rt-multi-thread", "macros"], optional = true}
 tracing = "0.1"
