--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = {version = "0.1", optional = true}
 clap = {version = "4", features = ["string"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
 daemon-slayer-console = {path = "../daemon-slayer-console", optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core"}
 daemon-slayer-error-handler = {path = "../daemon-slayer-error-handler", optional = true}
 daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
