--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -14,6 +14,8 @@ daemon-slayer-macros = {path = "../daemon-slayer-macros"}
 futures = {version = "0.3", optional = true}
 maybe-async-cfg = "0.2"
 once_cell = "1"
+strum = {version = "0.24.1", features = ["strum_macros"]}
+strum_macros = "0.24.3"
 tap = "1"
 tracing = "0.1"
 
