--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "daemon-slayer-cli",
   "daemon-slayer-logging",
   "daemon-slayer-console",
+  "daemon-slayer-health-check",
   "daemon-slayer-error-handler",
   "daemon-slayer-plugins/signals",
   "daemon-slayer-plugins/task-queue",
@@ -50,7 +51,7 @@ async-tokio = [
 blocking = [
   "daemon-slayer-server/blocking",
   "daemon-slayer-core/blocking",
-  "daemon-slayer-client/blocking",
+  "daemon-slayer-health-check/blocking",
   "daemon-slayer-plugin-signals/blocking",
   "daemon-slayer-plugin-file-watcher/blocking",
 ]
@@ -58,9 +59,9 @@ cli = ["daemon-slayer-cli"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console"]
 error-handler = ["daemon-slayer-error-handler"]
-grpc-health-check = ["daemon-slayer-client/grpc-health-check"]
-http-health-check = ["daemon-slayer-client/http-health-check"]
-ipc-health-check = ["daemon-slayer-client/ipc-health-check"]
+grpc-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/grpc-health-check"]
+http-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/http-health-check"]
+ipc-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
 plugin-file-watcher = ["daemon-slayer-plugin-file-watcher"]
 plugin-ipc-health-check = ["daemon-slayer-plugin-ipc-health-check", "async-tokio"]
@@ -88,6 +89,7 @@ daemon-slayer-client = {path = "./daemon-slayer-client", optional = true}
 daemon-slayer-console = {path = "./daemon-slayer-console", optional = true}
 daemon-slayer-core = {path = "./daemon-slayer-core"}
 daemon-slayer-error-handler = {path = "./daemon-slayer-error-handler", optional = true}
+daemon-slayer-health-check = {path = "./daemon-slayer-health-check", optional = true}
 daemon-slayer-logging = {path = "./daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "./daemon-slayer-server", optional = true}
 
