--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -4,17 +4,12 @@ name = "daemon-slayer-client"
 version = "0.1.0"
 
 [dependencies]
-async-trait = {version = "0.1"}
+async-trait = "0.1"
 daemon-slayer-core = {path = "../daemon-slayer-core"}
 eyre = "0.6"
 maybe-async-cfg = "0.2"
-parity-tokio-ipc = {version = "0.9", optional = true}
-reqwest = {version = "0.11", optional = true}
 strum = "0.24"
 strum_macros = "0.24"
-tokio = {version = "1", features = ["net"], optional = true}
-tonic = {version = "0.8", optional = true}
-tonic-health = {version = "0.7", optional = true}
 utfx = "0.1"
 
 [target.'cfg(windows)'.dependencies]
@@ -30,10 +25,3 @@ directories = "4"
 launchd = {git = "https://github.com/aschey/launchd", rev = "c4d6ae24de02cfc04097b1de3b33434eeb4a5d5e"}
 once_cell = "1.14"
 regex = "1.6"
-
-[features]
-async-tokio = ["tokio"]
-blocking = ["reqwest/blocking"]
-grpc-health-check = ["tonic", "tonic-health", "async-tokio"]
-http-health-check = ["reqwest"]
-ipc-health-check = ["parity-tokio-ipc", "async-tokio"]
