--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ async-tokio = [
   "daemon-slayer-server/async-tokio",
   "daemon-slayer-logging/async-tokio",
   "daemon-slayer-core/async-tokio",
+  "daemon-slayer-health-check/async-tokio",
   "daemon-slayer-plugin-signals/async-tokio",
   "daemon-slayer-plugin-file-watcher/async-tokio",
 ]
@@ -59,9 +60,10 @@ cli = ["daemon-slayer-cli"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console"]
 error-handler = ["daemon-slayer-error-handler"]
-grpc-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/grpc-health-check"]
-http-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/http-health-check"]
-ipc-health-check = ["daemon-slayer-health-check", "daemon-slayer-health-check/ipc-health-check"]
+grpc-health-check = ["health-check", "daemon-slayer-health-check/grpc-health-check"]
+health-check = ["daemon-slayer-health-check"]
+http-health-check = ["health-check", "daemon-slayer-health-check/http-health-check"]
+ipc-health-check = ["health-check", "daemon-slayer-health-check/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
 plugin-file-watcher = ["daemon-slayer-plugin-file-watcher"]
 plugin-ipc-health-check = ["daemon-slayer-plugin-ipc-health-check", "async-tokio"]
